--- a/index.html
+++ b/index.html
@@ -36,25 +36,25 @@
                                 <div class="form-control">
                                         <input type="text" placeholder="First Name" id="firstname" name="First Name">
                                         <small class="small">Error Message</small>
-                                        <img src="./images/icon-error.svg" alt="" id="error-icon">
+                                        <img src="./images/icon-error.svg" alt="" id="firstname-error-icon">
                                 </div>
 
                                 <div class="form-control">
                                         <input type="text" placeholder="Last Name"  id="lastname" name="Last Name">
                                         <small>Error Message</small>
-                                        <img src="./images/icon-error.svg" alt="" id="error-icon">
+                                        <img src="./images/icon-error.svg" alt="" id="lastname-error-icon">
                                 </div>
 
                                 <div class="form-control">
                                         <input type="email" placeholder="Email Address"  id="email" name="Email">
                                         <small class="email-error">Error Message</small>
-                                        <img src="./images/icon-error.svg" alt="" id="error-icon">
+                                        <img src="./images/icon-error.svg" alt="" id="email-error-icon">
                                 </div>
                                  
                                 <div class="form-control">
                                         <input type="password" placeholder="Password" id="password" name="Password" >
                                         <small>Error Message</small>
-                                        <img src="./images/icon-error.svg" alt="" id="error-icon">
+                                        <img src="./images/icon-error.svg" alt="" id="password-error-icon">
                                 </div>
                             
                                 <input type="submit" value="Claim your free trial" id="claim-free-trial" />
